--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ sudo: false
 language: ruby
 
 rvm:
-  - 2.2.7
+  - 2.3.1
+
+before_install:
+   - rvm install 2.3.1
 
 cache: bundler
 script: bundle exec middleman build
