--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,8 @@ jobs:
     - run: bundle config set deployment 'true'
     - run: bundle install
 
+    - run: bundle exec middleman build
+
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
